--- a/miniprogram/pages/tabBar/index/index.skeleton.wxml
+++ b/miniprogram/pages/tabBar/index/index.skeleton.wxml
@@ -1,14 +1,14 @@
 <!--
-此文件为开发者工具生成，生成时间: 2021/6/3 上午12:40:22
+此文件为开发者工具生成，生成时间: 2021/6/21 上午12:04:31
 使用方法：
-在 E:\myProject\miniprogram\wtl\miniprogram\pages\index\index.wxml 引入模板
+在 E:\myProject\miniprogram\wtl\miniprogram\pages\tabBar\index\index.wxml 引入模板
 
 ```
 <import src="index.skeleton.wxml"/>
 <template is="skeleton" wx-if="{{loading}}" />
 ```
 
-在 E:\myProject\miniprogram\wtl\miniprogram\pages\index\index.wxss 中引入样式
+在 E:\myProject\miniprogram\wtl\miniprogram\pages\tabBar\index\index.wxss 中引入样式
 ```
 @import "./index.skeleton.wxss";
 ```
@@ -17,6 +17,36 @@
 -->
 <template name="skeleton">
   <view class="sk-container">
-    <view class="class sk-transparent sk-text-14-2857-429 sk-text">12</view>
+    <view class="page-head">
+      <view is="components/navigation-bar/navigation-bar">
+        <view class="navigation-bar navigation-bar--navigation-bar">
+          <view class="navigation-bar--placeholder navigation-bar--navigation-bar--placeholder ios navigation-bar--ios" style="padding-top: 20px"></view>
+          <view class="navigation-bar--inner navigation-bar--navigation-bar--inner ios navigation-bar--ios" style="padding-top: 20px; color: #ffffff;background: #32c55b;padding-right: 94px;width: 281px;">
+            <view class="navigation-bar--left navigation-bar--navigation-bar--left" style="width: "></view>
+            <view class="navigation-bar--center navigation-bar--navigation-bar--center" style="justify-content: flex-start; text-align: left">
+              <text class="sk-transparent sk-text-18-7500-802 sk-text">广场</text>
+            </view>
+            <view class="navigation-bar--right navigation-bar--navigation-bar--right"></view>
+          </view>
+        </view>
+      </view>
+      <view is="components/search-bar/search-bar">
+        <view class="search-bar--search-bar search-wrap">
+          <view class="search-bar--search-inner">
+            <view class="search-bar--serch-input-group">
+              <view is="components/iconfont/iconfont" class="search-bar--icon">
+                <text class="iconfont icon-search sk-pseudo sk-pseudo-circle"></text>
+              </view>
+              <view class="search-bar--search-input">
+                <text class="search-bar--search-text sk-transparent sk-text-18-7500-842 sk-text">目的地/关键词</text>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+    <view class="class" data-weui-theme="dark">
+      <text class="sk-transparent sk-text-18-7500-385 sk-text">这是首页</text>
+    </view>
   </view>
 </template>
