--- a/miniprogram/pages/tabBar/index/index.skeleton.wxss
+++ b/miniprogram/pages/tabBar/index/index.skeleton.wxss
@@ -1,7 +1,7 @@
 /*
-此文件为开发者工具生成，生成时间: 2021/6/3 上午12:40:22
+此文件为开发者工具生成，生成时间: 2021/6/21 上午12:04:31
 
-在 E:\myProject\miniprogram\wtl\miniprogram\pages\index\index.wxss 中引入样式
+在 E:\myProject\miniprogram\wtl\miniprogram\pages\tabBar\index\index.wxss 中引入样式
 ```
 @import "./index.skeleton.wxss";
 ```
@@ -11,9 +11,9 @@
 .sk-transparent {
     color: transparent !important;
   }
-.sk-text-14-2857-429 {
-    background-image: linear-gradient(transparent 14.2857%, #EEEEEE 0%, #EEEEEE 85.7143%, transparent 0%) !important;
-    background-size: 100% 52.5000rpx;
+.sk-text-18-7500-802 {
+    background-image: linear-gradient(transparent 18.7500%, #EEEEEE 0%, #EEEEEE 81.2500%, transparent 0%) !important;
+    background-size: 100% 54.4000rpx;
     position: relative !important;
   }
 .sk-text {
@@ -23,6 +23,28 @@
     color: transparent !important;
     background-repeat: repeat-y !important;
   }
+.sk-text-18-7500-842 {
+    background-image: linear-gradient(transparent 18.7500%, #EEEEEE 0%, #EEEEEE 81.2500%, transparent 0%) !important;
+    background-size: 100% 44.8000rpx;
+    position: relative !important;
+  }
+.sk-text-18-7500-385 {
+    background-image: linear-gradient(transparent 18.7500%, #EEEEEE 0%, #EEEEEE 81.2500%, transparent 0%) !important;
+    background-size: 100% 51.2000rpx;
+    position: relative !important;
+  }
+.sk-pseudo::before, .sk-pseudo::after {
+      background: #EFEFEF !important;
+      background-image: none !important;
+      color: transparent !important;
+      border-color: transparent !important;
+    }
+.sk-pseudo-rect::before, .sk-pseudo-rect::after {
+      border-radius: 0 !important;
+    }
+.sk-pseudo-circle::before, .sk-pseudo-circle::after {
+      border-radius: 50% !important;
+    }
 .sk-container {
     position: absolute;
     left: 0;
