--- a/miniprogram/components/navigation-bar/navigation-bar.wxss
+++ b/miniprogram/components/navigation-bar/navigation-bar.wxss
@@ -28,7 +28,7 @@
 
 .navigation-bar--placeholder {
     height: 44px;
-    background: #f7f7f7;
+    background: #ebebeb;
     position: relative;
     z-index: 50;
 }
